--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,6 @@ if(${Python3_FOUND} AND ${Python3_Interpreter_FOUND})
         ${CMAKE_SOURCE_DIR}/src/chunk_attn/lib/
         #    COMMAND "${Python3_EXECUTABLE}" setup.py bdist_wheel ${DIST_PLATFORM}
         COMMAND "${Python3_EXECUTABLE}" -m pip install -e .
-        COMMAND "${Python3_EXECUTABLE}" -c "import mypy.stubgen; mypy.stubgen.main(['-p', 'chunk_attn.lib.chunk_attn_c', '-o', './src'])"
+        COMMAND "${Python3_EXECUTABLE}" -c \"import mypy.stubgen; mypy.stubgen.main(['-p', 'chunk_attn.lib.chunk_attn_c', '-o', './src'])\"
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 endif()
